Improve api doc
